# Project_coursework_2

./: README.md  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_api_py.html  z_145eef247bfb46b6_storage_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html
src/: api.py  storage.py  utils.py  vacancy.py
tests/: conftest.py  test_api.py  test_storage.py  test_utils.py  test_vacancy.py
