[tool.poetry]
name = "coursework2"
version = "0.1.0"
description = ""
authors = ["Stas Chernyi <itsmeprivet@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.2.1"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
pandas = "^2.3.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.11.0"
isort = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119